--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
-
-DATABASE_URI=mongodb://localhost/hubx_case
+HOST=0.0.0.0
+REMOTE=127.0.0.1
+DATABASE_URI=mongodb://127.0.0.1:27017/hubx_case
