--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "compression": "^1.7.4",
     "helmet": "^8.0.0",
     "mongoose": "^8.7.2",
+    "nestjs-pino": "^4.1.0",
+    "picocolors": "^1.1.1",
+    "pino": "^9.3.1",
+    "pino-http": "^10.3.0",
+    "pino-pretty": "^11.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
