--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   mongodb:
     image: mongo:latest
     env_file:
-      - .env
+      - .docker.env
     ports:
       - 27017:27017
     volumes:
@@ -18,7 +18,7 @@ services:
       - ${PORT}:${PORT}
     command: npm run start:prod
     env_file:
-      - .env
+      - .docker.env
     depends_on:
       - mongodb
 
